--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:&lt;your@email.com&gt;">
+  <a href="mailto:&lt;saeerisbud@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/USERNAME/">
+  <a href="http://github.com/saeeris/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -284,26 +284,20 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
+<p><img src="headshot.png" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-bevo-xv." class="section level1">
-<h1>Welcome! I am Bevo XV.</h1>
+<div id="welcome-my-name-is-saee." class="section level1">
+<h1>Welcome! My name is Saee.</h1>
 <p></br></p>
-<div
-id="i-weigh-almost-one-ton-and-my-horns-are-5-feet-long-from-tip-to-tip."
-class="section level5">
-<h5>I weigh almost one ton and my horns are ~5 feet long from tip to
-tip.</h5>
+<div id="im-a-neuroscience-major-and-a-senior." class="section level5">
+<h5>I’m a neuroscience major and a senior.</h5>
 </div>
-<div id="i-enjoy-football-and-chewing-on-various-grasses."
+<div id="i-like-to-read-play-the-piano-and-go-on-walks."
 class="section level5">
-<h5>I enjoy football and chewing on various grasses.</h5>
+<h5>I like to read, play the piano, and go on walks.</h5>
 </div>
-<div
-id="i-do-not-like-the-uga-bulldog-and-i-do-not-hold-any-advanced-degrees."
-class="section level5">
-<h5>I do not like the UGA Bulldog and I do not hold any advanced
-degrees.</h5>
+<div id="thanks-for-checking-out-my-website" class="section level5">
+<h5>Thanks for checking out my website!</h5>
 </div>
 <div
 id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here"
